Fixed navigation z-index, so it does not interact with other elements using aboslute position,

--- a/src/style.css
+++ b/src/style.css
@@ -92,11 +92,11 @@ body {
 .navigation, .footer {
     width:100vw;
     overflow:hidden;
-    background-color:rgba(0, 0, 0, 0.9);
+    background-color:#000;
 }
 
 .navigation {
-    z-index:2;
+    z-index:100;
     position:fixed;
     top:0;
 }
